--- a/docs_source/Makefile
+++ b/docs_source/Makefile
@@ -12,6 +12,13 @@ BUILDDIR      = build
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
+.PHONY: html
+
+html:
+	$(SPHINXBUILD) -b html -d $(BUILDDIR)/doctrees $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) source ../docs
+	@echo
+	@echo "Build finished. The HTML pages are in ../docs"
+	
 .PHONY: help Makefile
 
 # Catch-all target: route all unknown targets to Sphinx using the new
