--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,10 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+bin/
+man/
+pip-selfcheck.json
+pyvenv.cfg
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
