Enforce code style

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,8 @@ test=pytest
 [tool:pytest]
 minversion = 3.0
 testpaths = tests
+
+[flake8]
+max-line-length=100
+exclude = .eggs,.git,bin/*,docs/*,lib/*
+inline-quotes = single
