--- a/shippable.yml
+++ b/shippable.yml
@@ -16,7 +16,7 @@ build:
     pull: true
     
   ci:
-    - "pip install -e .[dev]"
+    - "pip install -e .[dev,ci]"
     - "flake8"
     
     #Create folders for test and code coverage
