Exclude Examples folder from flake8 checks

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,5 +7,5 @@ testpaths = tests
 
 [flake8]
 max-line-length=120
-exclude = .eggs,.git,bin/*,docs/*,lib/*
+exclude = .eggs,.git,bin/*,docs/*,lib/*,examples/*
 inline-quotes = single
