--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,6 +2,20 @@
 current_version = 0.1.0
 commit = True
 tag = True
+parse = (?P<major>\d+)
+	\.(?P<minor>\d+)
+	\.(?P<patch>\d+)
+	((?P<release>[a-z]+)(?P<num>\d+))?
+serialize =
+	{major}.{minor}.{patch}{release}{num}
+	{major}.{minor}.{patch}
+
+[bumpversion:part:release]
+optional_value = placeholder
+first_value = dev
+values =
+        dev
+        placeholder
 
 [bumpversion:file:setup.py]
 search = version='{current_version}'
@@ -10,4 +24,6 @@ replace = version='{new_version}'
 [bumpversion:file:docs/conf.py]
 
 [bumpversion:file:audiomate/__init__.py]
+
+
 
