--- a/shippable.yml
+++ b/shippable.yml
@@ -8,22 +8,20 @@ branches:
   except:
     - gh-pages
 
-build:
+install:
+  - sudo apt-get update
+  - sudo apt-get install -y libav-tools
+  - "pip install -e .[dev,ci]"
 
-  pre_ci_boot:
-    image_name: drydock/u14pytall
-    image_tag: latest
-    pull: true
-    
-  ci:
-    - sudo apt-get install -y libav-tools
-    - "pip install -e .[dev,ci]"
-    - "flake8"
-    
-    #Create folders for test and code coverage
-    - mkdir -p shippable/testresults
-    - mkdir -p shippable/codecoverage
+before_script:
+  #Create folders for test and code coverage
+  - mkdir -p shippable/testresults
+  - mkdir -p shippable/codecoverage
 
-    #Run test and code coverage and output results to the right folder
-    - pytest --junitxml=shippable/testresults/tests.xml
-    - pytest --cov=audiomate --cov-report=xml:shippable/codecoverage/coverage.xml
+script:
+  # Run flake
+  - flake8
+
+  #Run test and code coverage and output results to the right folder
+  - pytest --junitxml=shippable/testresults/tests.xml
+  - pytest --cov=audiomate --cov-report=xml:shippable/codecoverage/coverage.xml
