Include LICENSE in wheels
The MIT license requires all copies of the source code include the license.

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,3 +9,6 @@ testpaths = tests
 max-line-length=120
 exclude = .eggs,.git,bin/*,docs/*,lib/*,examples/*,.venv/,venv/
 inline-quotes = single
+
+[metadata]
+license_file = LICENSE
