--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ testpaths = tests
 
 [flake8]
 max-line-length=120
-exclude = .eggs,.git,bin/*,docs/*,lib/*,examples/*,.venv/,venv/
+exclude = .eggs,.git,build/*,bin/*,docs/*,lib/*,examples/*,.venv/,venv/
 inline-quotes = single
 
 [metadata]
