--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ test=pytest
 [tool:pytest]
 minversion = 3.0
 testpaths = tests
+addopts = --benchmark-autosave --benchmark-cprofile=tottime
 
 [flake8]
 max-line-length=120
