--- a/shippable.yml
+++ b/shippable.yml
@@ -3,14 +3,14 @@ language: python
 python:
   - 3.5
   - 3.6
-  
+
 branches:
   except:
     - gh-pages
 
 install:
   - sudo apt-get update
-  - sudo apt-get install -y libav-tools
+  - sudo apt-get install -y libav-tools sox
   - "pip install -e .[dev,ci]"
 
 before_script:
