Fix tests for downloaders due to mocking problem

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ addopts = --benchmark-autosave --benchmark-cprofile=tottime
 
 [flake8]
 max-line-length=120
-exclude = .eggs,.git,build/*,bin/*,docs/*,lib/*,examples/*,.venv/,venv/
+exclude = .eggs,.git,build/*,bin/*,docs/*,lib/*,examples/*,.venv/,venv/,.35venv/
 inline-quotes = single
 
 [metadata]
