--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -4,3 +4,8 @@ version = 1
 name = "python"
 enabled = true
 runtime_version = "3.x.x"
+
+# Test coverage analyzer
+[[analyzers]]
+name = "test-coverage"
+enabled = true
