--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,5 +1,16 @@
 version = 1
 
+test_patterns = [
+  "tests/**"
+]
+
+exclude_patterns = [
+  "bench/**",
+  "examples/**",
+  "docs/**"
+]
+
+
 [[analyzers]]
 name = "python"
 enabled = true
